--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@
     margin: 0;
     padding: 0;
 }
+button {
+    cursor: pointer;
+}
 
 body {
     background-image: linear-gradient(120deg, #a1c4fd 0%, #c2e9fb 100%);
